--- a/product1.html
+++ b/product1.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Campers | Tent</title>
-    <link rel="stylesheet" href="assets/css/variables.css" />
-    <link rel="stylesheet" href="assets/css/defaults.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/media_queries.css" />
-    <link rel="stylesheet" href="assets/css/slideshow.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/variables.css" >
+    <link rel="stylesheet" href="assets/css/defaults.css" >
+    <link rel="stylesheet" href="assets/css/navbar.css" >
+    <link rel="stylesheet" href="assets/css/media_queries.css" >
+    <link rel="stylesheet" href="assets/css/slideshow.css" >
+    <link rel="stylesheet" href="assets/css/styles.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    >
   </head>
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
@@ -52,9 +52,9 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Text</div>
                     </div>
                     <div class="mySlides fade">
@@ -62,9 +62,9 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
@@ -72,16 +72,16 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Three</div>
                     </div>
 
                     <a class="prev prev-1" onclick="plusSlides(-1)">❮</a>
                     <a class="next next-1" onclick="plusSlides(1)">❯</a>
                   </div>
-                  <br />
+                  <br >
                   <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -98,11 +98,11 @@
     <header>
       <div class="nav-wrapper">
         <div class="logo-container">
-          <img class="logo" src="assets/img/retail.svg" alt="Logo" />
+          <img class="logo" src="assets/img/retail.svg" alt="Logo" >
           <h3 class="logo-text">Campers</h3>
         </div>
         <nav>
-          <input class="hidden" type="checkbox" id="menuToggle" />
+          <input class="hidden" type="checkbox" id="menuToggle" >
           <label class="menu-btn" for="menuToggle">
             <div class="menu"></div>
             <div class="menu"></div>
@@ -145,7 +145,7 @@
             <h4>$149.99</h4>
             <div class="count-wrapper mt-1">
               <button class="btn btn-primary">-</button>
-              <input type="text" value="1" />
+              <input type="text" value="1" >
               <button class="btn btn-primary">+</button>
             </div>
             <div class="text-center">
@@ -158,28 +158,28 @@
             class="product-image"
             src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
             alt="Tent"
-          />
+          >
           <div class="img-flex">
             <div>
               <img
                 class="product-image"
                 src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
                 alt="Tent"
-              />
+              >
             </div>
             <div>
               <img
                 class="product-image"
                 src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
                 alt="Tent"
-              />
+              >
             </div>
             <div>
               <img
                 class="product-image"
                 src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
                 alt="Tent"
-              />
+              >
             </div>
           </div>
         </div>
@@ -237,9 +237,6 @@
     </footer>
   </body>
 </html>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"
-></script>
+<script src="../assets/js/jquery-3.6.0.min.js"></script>
 <script src="../assets/js/main.js"></script>
+<script src="../assets/js/main_2.js"></script>
