--- a/basket.html
+++ b/basket.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Campers | Basket</title>
-    <link rel="stylesheet" href="assets/css/variables.css" />
-    <link rel="stylesheet" href="assets/css/defaults.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/media_queries.css" />
-    <link rel="stylesheet" href="assets/css/slideshow.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/variables.css" >
+    <link rel="stylesheet" href="assets/css/defaults.css" >
+    <link rel="stylesheet" href="assets/css/navbar.css" >
+    <link rel="stylesheet" href="assets/css/media_queries.css" >
+    <link rel="stylesheet" href="assets/css/slideshow.css" >
+    <link rel="stylesheet" href="assets/css/styles.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    >
   </head>
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
@@ -52,9 +52,9 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Text</div>
                     </div>
                     <div class="mySlides fade">
@@ -62,9 +62,9 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
@@ -72,16 +72,16 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Three</div>
                     </div>
 
                     <a class="prev prev-1" onclick="plusSlides(-1)">❮</a>
                     <a class="next next-1" onclick="plusSlides(1)">❯</a>
                   </div>
-                  <br />
+                  <br >
                   <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -98,11 +98,11 @@
     <header>
       <div class="nav-wrapper">
         <div class="logo-container">
-          <img class="logo" src="assets/img/retail.svg" alt="Logo" />
+          <img class="logo" src="assets/img/retail.svg" alt="Logo" >
           <h3 class="logo-text">Campers</h3>
         </div>
         <nav>
-          <input class="hidden" type="checkbox" id="menuToggle" />
+          <input class="hidden" type="checkbox" id="menuToggle" >
           <label class="menu-btn" for="menuToggle">
             <div class="menu"></div>
             <div class="menu"></div>
@@ -152,7 +152,7 @@
                     alt="Visa"
                     width="100"
                     height="100"
-                  />
+                  >
                 </div>
                 <div>
                   <img
@@ -160,7 +160,7 @@
                     alt="JCB"
                     width="100"
                     height="100"
-                  />
+                  >
                 </div>
                 <div>
                   <img
@@ -168,7 +168,7 @@
                     alt="UnionPay"
                     width="100"
                     height="100"
-                  />
+                  >
                 </div>
                 <div>
                   <img
@@ -176,7 +176,7 @@
                     alt="MasterCard"
                     width="100"
                     height="100"
-                  />
+                  >
                 </div>
                 <div>
                   <img
@@ -184,7 +184,7 @@
                     alt="PayPal"
                     width="100"
                     height="100"
-                  />
+                  >
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
                   </div>
                 </div>
               </div>
-              <hr />
+              <hr >
               <div class="receipt-option-wrapper mt-1">
                 <div class="container-fluid row receipt-option">
                   <div class="col-8">
@@ -215,7 +215,7 @@
                   </div>
                 </div>
               </div>
-              <hr />
+              <hr >
               <div class="receipt-option-wrapper mt-1">
                 <div class="container-fluid row receipt-option">
                   <div class="col-8">
@@ -229,7 +229,7 @@
                   </div>
                 </div>
               </div>
-              <hr />
+              <hr >
             </div>
           </div>
           <div class="basket-section-1">
@@ -324,9 +324,6 @@
     </footer>
   </body>
 </html>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"
-></script>
+<script src="../assets/js/jquery-3.6.0.min.js"></script>
 <script src="../assets/js/main.js"></script>
+<script src="../assets/js/main_2.js"></script>
