--- a/equipment.html
+++ b/equipment.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Campers | Equipment</title>
-    <link rel="stylesheet" href="assets/css/variables.css" />
-    <link rel="stylesheet" href="assets/css/defaults.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/media_queries.css" />
-    <link rel="stylesheet" href="assets/css/slideshow.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/variables.css" >
+    <link rel="stylesheet" href="assets/css/defaults.css" >
+    <link rel="stylesheet" href="assets/css/navbar.css" >
+    <link rel="stylesheet" href="assets/css/media_queries.css" >
+    <link rel="stylesheet" href="assets/css/slideshow.css" >
+    <link rel="stylesheet" href="assets/css/styles.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    >
   </head>
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
@@ -52,9 +52,9 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Text</div>
                     </div>
                     <div class="mySlides fade">
@@ -62,9 +62,9 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
@@ -72,16 +72,16 @@
                       <img
                         class="img-responsive"
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
-                        width="500px"
-                        height="500px"
-                      />
+                        width="500"
+                        height="500"
+                      >
                       <div class="text">Caption Three</div>
                     </div>
 
                     <a class="prev prev-1" onclick="plusSlides(-1)">❮</a>
                     <a class="next next-1" onclick="plusSlides(1)">❯</a>
                   </div>
-                  <br />
+                  <br >
                   <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -98,11 +98,11 @@
     <header>
       <div class="nav-wrapper">
         <div class="logo-container">
-          <img class="logo" src="assets/img/retail.svg" alt="Logo" />
+          <img class="logo" src="assets/img/retail.svg" alt="Logo" >
           <h3 class="logo-text">Campers</h3>
         </div>
         <nav>
-          <input class="hidden" type="checkbox" id="menuToggle" />
+          <input class="hidden" type="checkbox" id="menuToggle" >
           <label class="menu-btn" for="menuToggle">
             <div class="menu"></div>
             <div class="menu"></div>
@@ -145,7 +145,7 @@
             alt="camping stove"
             width="200"
             height="200"
-          />
+          >
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
                 alt="camping stove"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Cookwares</h4>
                 <p>Organic, Sustainable</p>
@@ -180,7 +180,7 @@
                 alt="camping stove"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Camping Stove</h4>
                 <p>Organic, Sustainable</p>
@@ -199,7 +199,7 @@
                 alt="camping stove"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Camping Bag</h4>
                 <p>Organic, Sustainable</p>
@@ -218,7 +218,7 @@
                 alt="camping stove"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Camping Tent</h4>
                 <p>Organic, Sustainable</p>
@@ -237,7 +237,7 @@
                 alt="tent lamp"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Temp Lamp</h4>
                 <p>Organic, Sustainable</p>
@@ -256,7 +256,7 @@
                 alt="sleeping pad"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Sleeping Pad</h4>
                 <p>Organic, Sustainable</p>
@@ -275,7 +275,7 @@
                 alt="camping hammock"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Camping Hammock</h4>
                 <p>Organic, Sustainable</p>
@@ -294,7 +294,7 @@
                 alt="air mattress"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Air Mattress</h4>
                 <p>Organic, Sustainable</p>
@@ -313,7 +313,7 @@
                 alt="portable power station"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Portable Power Station</h4>
                 <p>Organic, Sustainable</p>
@@ -332,7 +332,7 @@
                 alt="portable camping stove"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Portable Camping Stove</h4>
                 <p>Organic, Sustainable</p>
@@ -351,7 +351,7 @@
                 alt="women urinal funnel"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Women Urinal Funnel</h4>
                 <p>Organic, Sustainable</p>
@@ -370,7 +370,7 @@
                 alt="gearlight led headlamp"
                 width="300"
                 height="300"
-              />
+              >
               <div class="card-body">
                 <h4 class="card-title">Gearlight LED Headlamp</h4>
                 <p>Organic, Sustainable</p>
@@ -422,9 +422,6 @@
     </footer>
   </body>
 </html>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"
-></script>
+<script src="../assets/js/jquery-3.6.0.min.js"></script>
 <script src="../assets/js/main.js"></script>
+<script src="../assets/js/main_2.js"></script>
