[html,css] update category list

--- a/basket.html
+++ b/basket.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campers | Basket</title>
-    <link rel="stylesheet" href="assets/css/variables.css" >
-    <link rel="stylesheet" href="assets/css/defaults.css" >
-    <link rel="stylesheet" href="assets/css/navbar.css" >
-    <link rel="stylesheet" href="assets/css/media_queries.css" >
-    <link rel="stylesheet" href="assets/css/slideshow.css" >
-    <link rel="stylesheet" href="assets/css/styles.css" >
+    <link rel="stylesheet" href="assets/css/variables.css" />
+    <link rel="stylesheet" href="assets/css/defaults.css" />
+    <link rel="stylesheet" href="assets/css/navbar.css" />
+    <link rel="stylesheet" href="assets/css/media_queries.css" />
+    <link rel="stylesheet" href="assets/css/slideshow.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    >
+    />
   </head>
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
@@ -54,7 +54,7 @@
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
                         width="500"
                         height="500"
-                      >
+                      />
                       <div class="text">Caption Text</div>
                     </div>
                     <div class="mySlides fade">
@@ -64,7 +64,7 @@
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
                         width="500"
                         height="500"
-                      >
+                      />
                       <div class="text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
@@ -74,14 +74,14 @@
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
                         width="500"
                         height="500"
-                      >
+                      />
                       <div class="text">Caption Three</div>
                     </div>
 
                     <a class="prev prev-1" onclick="plusSlides(-1)">❮</a>
                     <a class="next next-1" onclick="plusSlides(1)">❯</a>
                   </div>
-                  <br >
+                  <br />
                   <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -98,11 +98,11 @@
     <header>
       <div class="nav-wrapper">
         <div class="logo-container">
-          <img class="logo" src="assets/img/retail.svg" alt="Logo" >
+          <img class="logo" src="assets/img/retail.svg" alt="Logo" />
           <h3 class="logo-text">Campers</h3>
         </div>
         <nav>
-          <input class="hidden" type="checkbox" id="menuToggle" >
+          <input class="hidden" type="checkbox" id="menuToggle" />
           <label class="menu-btn" for="menuToggle">
             <div class="menu"></div>
             <div class="menu"></div>
@@ -152,7 +152,7 @@
                     alt="Visa"
                     width="100"
                     height="100"
-                  >
+                  />
                 </div>
                 <div>
                   <img
@@ -160,7 +160,7 @@
                     alt="JCB"
                     width="100"
                     height="100"
-                  >
+                  />
                 </div>
                 <div>
                   <img
@@ -168,7 +168,7 @@
                     alt="UnionPay"
                     width="100"
                     height="100"
-                  >
+                  />
                 </div>
                 <div>
                   <img
@@ -176,7 +176,7 @@
                     alt="MasterCard"
                     width="100"
                     height="100"
-                  >
+                  />
                 </div>
                 <div>
                   <img
@@ -184,7 +184,7 @@
                     alt="PayPal"
                     width="100"
                     height="100"
-                  >
+                  />
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
                   </div>
                 </div>
               </div>
-              <hr >
+              <hr />
               <div class="receipt-option-wrapper mt-1">
                 <div class="container-fluid row receipt-option">
                   <div class="col-8">
@@ -215,7 +215,7 @@
                   </div>
                 </div>
               </div>
-              <hr >
+              <hr />
               <div class="receipt-option-wrapper mt-1">
                 <div class="container-fluid row receipt-option">
                   <div class="col-8">
@@ -229,7 +229,7 @@
                   </div>
                 </div>
               </div>
-              <hr >
+              <hr />
             </div>
           </div>
           <div class="basket-section-1">
@@ -312,7 +312,15 @@
             <p>123, Main Street, Your City, Your Country</p>
             <p>Phone: +123 456 7890</p>
             <div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.5441490457433!2d96.13509161544958!3d16.848955788403387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19492c4bbe131%3A0x974ebe72a63ebb40!2sPyay%20Rd%2C%20Yangon!5e0!3m2!1sen!2smm!4v1673330755963!5m2!1sen!2smm" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.5441490457433!2d96.13509161544958!3d16.848955788403387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19492c4bbe131%3A0x974ebe72a63ebb40!2sPyay%20Rd%2C%20Yangon!5e0!3m2!1sen!2smm!4v1673330755963!5m2!1sen!2smm"
+                width="300"
+                height="300"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
         </div>
